viz: Make sure video capture resumes after viz crash

This CL introduces ClientFrameSinkVideoCapturer, a client-side library
that interacts with FrameSinkVideoCapturer and can handle viz crashes.
This CL converts FrameSinkVideoCaptureDevice to use
ClientFrameSinkVideoCapturer but the DevTools usages of
FrameSinkVideoCapturer aren't converted yet.

Bug: 806377
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I982ca324491fafe9331de4b660cb81f93fcc4605
Reviewed-on: https://chromium-review.googlesource.com/1066224
Reviewed-by: John Rummell <jrummell@chromium.org>
Reviewed-by: kylechar <kylechar@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561341}
Former-commit-id: baecc27961585a9f936fa997e67fe8b9b3d7fab3